# cann-ops-transformer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  QUICKSTART.md  README.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  build.sh  cann_3rd_lib_path_download.py  classify_rule.yaml  install_deps.sh  version.cmake  version.info
attention/attention_update/: README.md
attention/attention_worker_scheduler/: README.md
attention/block_sparse_attention/: README.md
attention/block_sparse_attention_grad/: README.md
attention/dense_lightning_indexer_grad_kl_loss/: README.md
attention/dense_lightning_indexer_softmax_lse/: README.md
attention/flash_attention_score/: README.md
attention/flash_attention_score_grad/: README.md
attention/fused_causal_conv1d/: README.md
attention/fused_floyd_attention/: README.md
attention/fused_floyd_attention_grad/: README.md
attention/fused_infer_attention_score/: README.md
attention/gather_pa_kv_cache/: README.md
attention/incre_flash_attention/: README.md
attention/kv_quant_sparse_flash_attention/: README.md
attention/kv_quant_sparse_flash_attention_pioneer/: README.md
attention/lightning_indexer/: README.md
attention/mla_preprocess/: README.md
attention/mla_preprocess_v2/: README.md
attention/mla_prolog/: README.md
attention/mla_prolog_v2/: README.md
attention/mla_prolog_v3/: README.md
attention/nsa_compress/: README.md
attention/nsa_compress_attention_infer/: README.md
attention/nsa_compress_grad/: README.md
attention/nsa_compress_with_cache/: README.md
attention/nsa_selected_attention/: README.md
attention/nsa_selected_attention_grad/: README.md
attention/nsa_selected_attention_infer/: README.md
attention/quant_lightning_indexer/: README.md
attention/rain_fusion_attention/: README.md
attention/recurrent_gated_delta_rule/: README.md
attention/ring_attention_update/: README.md
attention/scatter_pa_kv_cache/: README.md
attention/sparse_flash_attention/: README.md
cmake/: config.cmake  custom_build.cmake  dependencies.cmake  func.cmake  obj_func.cmake  opbuild.cmake  package.cmake  rty_obj_func.cmake  symbol.cmake  variables.cmake
cmake/modules/: Findaicpu.cmake
cmake/scripts/: parse_changed_files.py  prepare.sh
common/: CMakeLists.txt
docs/: CONTRIBUTING_DOCS.md  QUICKSTART.md  README.md
docs/zh/: op_api_list.md  op_list.md
examples/: README.md
examples/add_example/: README.md
examples/fast_kernel_launch_example/: CMakeLists.txt  README.md  build_and_test.sh  setup.py
examples/fast_kernel_launch_example/csrc/grouped_matmul/ascend910b/: CMakeLists.txt  grouped_matmul_tiling_common.h  grouped_matmul_torch.cpp  grouped_matmul_torch.h
examples/fast_kernel_launch_example/csrc/grouped_matmul/ascend910b/op_kernel/: grouped_matmul.h  grouped_matmul_kernel.h  grouped_matmul_tiling.h
experimental/ascend_ops/: README.md
experimental/mamba/: Readme.md
experimental/mhc/: README.md
experimental/npu_ops_transformer_ext/: CMakeLists.txt  README.md
experimental/select_attention_operators/: README.md
ffn/ffn/: README.md
ffn/ffn_worker_batching/: README.md
ffn/ffn_worker_scheduler/: README.md
ffn/swin_attention_ffn/: README.md
ffn/swin_transformer_ln_qkv/: README.md
ffn/swin_transformer_ln_qkv_quant/: README.md
gmm/grouped_matmul/: README.md
gmm/grouped_matmul_add/: README.md
gmm/grouped_matmul_finalize_routing/: README.md
gmm/grouped_matmul_swiglu_quant/: README.md
gmm/grouped_matmul_swiglu_quant_v2/: README.md
gmm/quant_grouped_matmul_inplace_add/: README.md
mc2/3rd/: CMakeLists.txt
mc2/all_gather_matmul/: README.md
mc2/all_gather_matmul_v2/: README.md
mc2/allto_all_all_gather_batch_mat_mul/: README.md
mc2/allto_all_matmul/: README.md
mc2/common/: CMakeLists.txt
mc2/common/inc/: mc2_a5_gen_task_utils.h  mc2_exception_dump.h  mc2_gen_task_ops_utils.h  mc2_gen_task_ops_utils_arch35.h  mc2_hcom_topo_info.h  mc2_log.h
mc2/common/inc/kernel/: mc2_matmul_compute.h  mc2_moe_context.h  mc2_nd_to_nz.h  mc2_tiling_struct.h  moe_distribute_base.h  moe_distribute_comm_ctx.h  qbmm_asw_block_noncontiguous.h  qbmm_mix_perblock_noncontiguous.h  qbmm_perblock_api_utils_noncontiguous.h
mc2/common/inc/tiling/: formulaic_tiling_datatype.h  hccl_performance.h  matmul_formulaic_tiling.h  matmul_performance.h  mc2_calc_num_blocks.h  mc2_fit_based_balance_tiling.h  mc2_tiling_struct.h  mc2_tiling_utils.h
mc2/common/new_mc2_mm/kernel/: mc2_quant_batch_matmul.h
mc2/common/op_host/op_tiling/: formulaic_tiling_datatype.h  hccl_performance.cpp  hccl_performance_arch35.cpp
mc2/common/op_kernel/mc2_templates/computation/matmul/: mc2_fp_matmul.h
mc2/common/op_kernel/mc2_templates/quantization/fp8/: fp8_dynamic_quant_pertoken.h
mc2/common/src/: context_transfer.cpp  hccl_performance_arch35.cpp  matmul_formulaic_tiling.cpp  matmul_performance.cpp  mc2_a5_gen_task_utils.cpp  mc2_aclnn_util.cpp  mc2_fit_based_balance_tiling.cpp  mc2_gen_task_ops_utils.cpp  mc2_gen_task_ops_utils_arch35.cpp  mc2_hcom_topo_info.cpp  mc2_matmul_tiling_cfg.cpp  mc2_moe_gen_task_ops_utils.cpp  mc2_tiling_utils.cpp
mc2/common/utils/: mc2_exception_dump.h
scripts/: check_build_dependencies.py  generate_version_info.py
tests/: test_config.yaml
torch_extension/: README.md
(+1937 files in other folders)
